# docs/swagger/swagger.json
@@ -51,19 +51,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.ArticlesEnvelope"
+                            "$ref": "#/definitions/controller.ListArticlesResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorEnvelope"
+                            "$ref": "#/definitions/controller.ErrorDetail"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorEnvelope"
+                            "$ref": "#/definitions/controller.ErrorDetail"
                         }
                     }
                 }
@@ -94,19 +94,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/controller.ArticleEnvelope"
+                            "$ref": "#/definitions/controller.ArticleResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorEnvelope"
+                            "$ref": "#/definitions/controller.ErrorDetail"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/controller.ErrorEnvelope"
+                            "$ref": "#/definitions/controller.ErrorDetail"
                         }
                     }
                 }
@@ -114,14 +114,6 @@
         }
     },
     "definitions": {
-        "controller.ArticleEnvelope": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/controller.ArticleResponse"
-                }
-            }
-        },
         "controller.ArticleResponse": {
             "type": "object",
             "properties": {
@@ -139,21 +131,6 @@
                 },
                 "title": {
                     "type": "string"
-                }
-            }
-        },
-        "controller.ArticlesEnvelope": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/controller.ArticleResponse"
-                    }
-                },
-                "next_cursor": {
-                    "type": "string",
-                    "example": "eyJjcmVhdGVkX2F0IjoiMjAyNi0wOS0wOFQxMjowMDowMC4xMjM0NTZaIiwiaWQiOiIzZmE4NWY2NC01NzE3LTQ1NjItYjNmYy0yYzk2M2Y2NmFmYTYifQ"
                 }
             }
         },
@@ -192,11 +169,26 @@
                 }
             }
         },
-        "controller.ErrorEnvelope": {
+        "controller.ListArticlesMeta": {
             "type": "object",
             "properties": {
-                "error": {
-                    "$ref": "#/definitions/controller.ErrorDetail"
+                "next_cursor": {
+                    "type": "string",
+                    "example": "eyJjcmVhdGVkX2F0IjoiMjAyNi0wOS0wOFQxMjowMDowMC4xMjM0NTZaIiwiaWQiOiIzZmE4NWY2NC01NzE3LTQ1NjItYjNmYy0yYzk2M2Y2NmFmYTYifQ"
+                }
+            }
+        },
+        "controller.ListArticlesResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controller.ArticleResponse"
+                    }
+                },
+                "meta": {
+                    "$ref": "#/definitions/controller.ListArticlesMeta"
                 }
             }
         }
